--- a/VUE-Amazing-Events/event-details.html
+++ b/VUE-Amazing-Events/event-details.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <main class="d-flex flex-column vh-100">
+    <main class="d-flex flex-column vh-100" id="App">
       <header
         class="container-fluid bg-dark text-white d-flex flex-column flex-md-row justify-content-between align-items-center px-0 px-sm-2 py-1 border-bottom border-danger">
         <a href="./index.html">
@@ -46,9 +46,33 @@
       </header>
       <!-- CARD DETAILS -->
       <section id="details" class="d-flex flex-column align-items-center justify-content-center flex-grow-1">
-        <div class="spinner-border text-danger" role="status">
-          <span class="visually-hidden">Loading...</span>
-        </div>
+        <template v-if="eventDetails && eventDetails.name">
+          <div class="d-flex col justify-content-center">
+            <div class="card justify-content-between bg-dark text-white p-3 gap-1">
+              <img :src=eventDetails.image class="card-img-top rounded" alt={{eventDetails.name}}>
+              <div class="d-flex flex-column justify-content-center gap-2 text-center p-0 py-3">
+                <h5 class="card-title fs-1 border-bottom border-danger">{{eventDetails.name}}</h5>
+                <p class="card-text fs-4"><small>{{eventDetails.date}}</small></p>
+                <h6 class="card-subtitle mb-2 text-white">{{eventDetails.description}}</h6>
+              </div>
+              <div class="d-flex flex-wrap justify-content-evenly w-100">
+                <p class="card-text fs-4"><small>Price : ${{eventDetails.price}}</small></p>
+                <p class="card-text fs-4"><small>{{eventDetails.assistance ? 'Assistence' : 'Estimated'}} :
+                    {{eventDetails.assistance ? eventDetails.assistance : eventDetails.estimate}}</small></p>
+              </div>
+              <div class="d-flex flex-wrap justify-content-evenly align-items-center w-100 gap-1">
+                <p class="card-text fs-3 border border-danger rounded px-1">{{eventDetails.category}}</p>
+                <p class="card-text fs-3 border border-primary rounded px-1">{{eventDetails.place}}</p>
+                <p class="card-text fs-3 border border-warning rounded px-1">{{eventDetails.capacity}}</p>
+              </div>
+            </div>
+          </div>
+        </template>
+        <template v-else>
+          <div class="spinner-border text-danger" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </template>
       </section>
       <footer class="d-flex justify-content-between align-items-center bg-danger p-3">
         <nav class="d-flex gap-2">
@@ -72,7 +96,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script>
-    <script src="./details.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@3"></script>
+    <script src="./home.js"></script>
   </body>
 
 </html>
