--- a/VUE-Amazing-Events/stats.html
+++ b/VUE-Amazing-Events/stats.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <main class="d-flex flex-column vh-100">
+    <main class="d-flex flex-column vh-100" id="App">
       <header
         class="container-fluid bg-dark text-white d-flex flex-column flex-md-row justify-content-between align-items-center px-0 px-sm-2 py-1 border-bottom border-danger">
         <a href="./index.html">
@@ -63,18 +63,30 @@
               <td class="w-25">Event with larger capacity</td>
             </tr>
             <tr>
+              {{getHighestAttendanceEvent}}
               <th id="highestPercentage">
-                <div class="spinner-border text-danger" role="status">
+                <div v-if="highestAttendanceEvent.total">
+                  {{highestAttendanceEvent.name}} - {{highestAttendanceEvent.total}}
+                </div>
+                <div v-else class="spinner-border text-danger" role="status">
                   <span class="visually-hidden">Loading...</span>
                 </div>
               </th>
+              {{getLowestAttendanceEvent}}
               <td id="lowestPercentage">
-                <div class="spinner-border text-danger" role="status">
+                <div v-if="lowestAttendanceEvent.total">
+                  {{lowestAttendanceEvent.name}} - {{lowestAttendanceEvent.total}}
+                </div>
+                <div v-else class="spinner-border text-danger" role="status">
                   <span class="visually-hidden">Loading...</span>
                 </div>
               </td>
+              {{getHighestCapacityEvent}}
               <td id="largerCapacity">
-                <div class="spinner-border text-danger" role="status">
+                <div v-if="highestCapacityEvent.total">
+                  {{highestCapacityEvent.name}} - {{highestCapacityEvent.total}}
+                </div>
+                <div v-else class="spinner-border text-danger" role="status">
                   <span class="visually-hidden">Loading...</span>
                 </div>
               </td>
@@ -94,23 +106,33 @@
               <td class="w-25">Revenues</td>
               <td class="w-25">Percentage of attendance</td>
             </tr>
-            <tr>
-              <th>
-                <div class="spinner-border text-danger" role="status">
-                  <span class="visually-hidden">Loading...</span>
-                </div>
-              </th>
-              <td>
-                <div class="spinner-border text-danger" role="status">
-                  <span class="visually-hidden">Loading...</span>
-                </div>
-              </td>
-              <td>
-                <div class="spinner-border text-danger" role="status">
-                  <span class="visually-hidden">Loading...</span>
-                </div>
-              </td>
-            </tr>
+            {{getUpcomingEventsByCategories}}
+            <template v-if="upcomingEventStats && upcomingEventStats.length">
+              <tr v-for="event of upcomingEventStats">
+                <td>{{event.categories}}</td>
+                <td>${{event.price}}</td>
+                <td>{{event.percentage}}%</td>
+              </tr>
+            </template>
+            <template v-else>
+              <tr>
+                <th>
+                  <div class="spinner-border text-danger" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                  </div>
+                </th>
+                <td>
+                  <div class="spinner-border text-danger" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                  </div>
+                </td>
+                <td>
+                  <div class="spinner-border text-danger" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                  </div>
+                </td>
+              </tr>
+            </template>
           </tbody>
         </table>
         <table class="table table-bordered m-0">
@@ -126,23 +148,33 @@
               <td class="w-25">Revenues</td>
               <td class="w-25">Percentage of attendance</td>
             </tr>
-            <tr>
-              <th>
-                <div class="spinner-border text-danger" role="status">
-                  <span class="visually-hidden">Loading...</span>
-                </div>
-              </th>
-              <td>
-                <div class="spinner-border text-danger" role="status">
-                  <span class="visually-hidden">Loading...</span>
-                </div>
-              </td>
-              <td>
-                <div class="spinner-border text-danger" role="status">
-                  <span class="visually-hidden">Loading...</span>
-                </div>
-              </td>
-            </tr>
+            {{getPastEventsByCategories}}
+            <template v-if="pastEventStats && pastEventStats.length">
+              <tr v-for="event of pastEventStats">
+                <td>{{event.categories}}</td>
+                <td>${{event.price}}</td>
+                <td>{{event.percentage}}%</td>
+              </tr>
+            </template>
+            <template v-else>
+              <tr>
+                <th>
+                  <div class="spinner-border text-danger" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                  </div>
+                </th>
+                <td>
+                  <div class="spinner-border text-danger" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                  </div>
+                </td>
+                <td>
+                  <div class="spinner-border text-danger" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                  </div>
+                </td>
+              </tr>
+            </template>
           </tbody>
         </table>
       </div>
@@ -168,7 +200,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script>
-    <script src="./stats.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@3"></script>
+    <script src="./home.js"></script>
   </body>
 
 </html>
