--- a/VUE-Amazing-Events/event-details.html
+++ b/VUE-Amazing-Events/event-details.html
@@ -20,50 +20,77 @@
     <main class="d-flex flex-column vh-100" id="App">
       <header
         class="container-fluid bg-dark text-white d-flex flex-column flex-md-row justify-content-between align-items-center px-0 px-sm-2 py-1 border-bottom border-danger">
-        <a href="./index.html">
-          <img class="ratio ratio-21x9" style="width:15rem;" src="./assets/Logo_Amazing_Events.png"
-            alt="Amazing Events Logo">
-        </a>
-        <nav class="flex-grow-1">
-          <ul class="navbar-nav list-group list-group-horizontal justify-content-evenly flex-row flex-wrap gap-1">
-            <li class="nav-item">
-              <a class="btn btn-danger" href="./index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="btn btn-danger" href="./upcoming-events.html">Upcoming Events</a>
-            </li>
-            <li class="nav-item">
-              <a class="btn btn-danger" href="./past-events.html">Past Events</a>
-            </li>
-            <li class="nav-item">
-              <a class="btn btn-danger" href="./contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="btn btn-danger" href="./stats.html">Stats</a>
-            </li>
-          </ul>
+        <nav class="navbar navbar-expand-md w-100">
+          <div class="container-fluid">
+            <a class="navbar-brand m-0" href="./index.html">
+              <img class="ratio ratio-21x9" src="./assets/Logo_Amazing_Events.png" alt="Amazing Events Logo">
+            </a>
+            <button class="navbar-toggler btn btn-danger" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent">
+              <ul
+                class="navbar-nav list-group list-group-horizontal justify-content-evenly flex-row flex-wrap gap-1 w-100">
+                <li class="nav-item">
+                  <a class="btn btn-danger" href="./index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="btn btn-danger" href="./upcoming-events.html">Upcoming Events</a>
+                </li>
+                <li class="nav-item">
+                  <a class="btn btn-danger" href="./past-events.html">Past Events</a>
+                </li>
+                <li class="nav-item">
+                  <a class="btn btn-danger" href="./contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="btn btn-danger" href="./stats.html">Stats</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </nav>
       </header>
       <!-- CARD DETAILS -->
-      <section id="details" class="d-flex flex-column align-items-center justify-content-center flex-grow-1">
+      <section id="details" class="d-flex flex-column align-items-center justify-content-center flex-grow-1 my-1">
         <template v-if="eventDetails && eventDetails.name">
           <div class="d-flex col justify-content-center">
             <div class="card justify-content-between bg-dark text-white p-3 gap-1">
-              <img :src=eventDetails.image class="card-img-top rounded" alt={{eventDetails.name}}>
-              <div class="d-flex flex-column justify-content-center gap-2 text-center p-0 py-3">
+              <div class="position-relative">
+                <img :src=eventDetails.image class="card-img-top" :alt=`${eventDetails.name}`>
+                <p class="card-date bg-dark border border-danger px-3 card-text fs-4">
+                  <small>{{eventDetails.date}}</small>
+                </p>
+              </div>
+              <div class="d-flex flex-column justify-content-center gap-2 p-0 py-3">
                 <h5 class="card-title fs-1 border-bottom border-danger">{{eventDetails.name}}</h5>
-                <p class="card-text fs-4"><small>{{eventDetails.date}}</small></p>
-                <h6 class="card-subtitle mb-2 text-white">{{eventDetails.description}}</h6>
+                <h3>Description</h3>
+                <h6 class="card-subtitle mb-2 text-white-50">{{eventDetails.description}}</h6>
               </div>
-              <div class="d-flex flex-wrap justify-content-evenly w-100">
-                <p class="card-text fs-4"><small>Price : ${{eventDetails.price}}</small></p>
-                <p class="card-text fs-4"><small>{{eventDetails.assistance ? 'Assistence' : 'Estimated'}} :
-                    {{eventDetails.assistance ? eventDetails.assistance : eventDetails.estimate}}</small></p>
-              </div>
-              <div class="d-flex flex-wrap justify-content-evenly align-items-center w-100 gap-1">
-                <p class="card-text fs-3 border border-danger rounded px-1">{{eventDetails.category}}</p>
-                <p class="card-text fs-3 border border-primary rounded px-1">{{eventDetails.place}}</p>
-                <p class="card-text fs-3 border border-warning rounded px-1">{{eventDetails.capacity}}</p>
+              <div class="d-flex flex-wrap justify-content-between w-100 gap-2">
+                <div>
+                  <h3 class="border-bottom border-danger">Price</h3>
+                  <p><strong class="fs-1">${{eventDetails.price}}</strong>/Person</p>
+                </div>
+                <div>
+                  <h3 class="border-bottom border-danger">{{eventDetails.assistance ? 'Assistence' : 'Estimated'}}</h3>
+                  <p class="card-text fs-1 bold">
+                    {{eventDetails.assistance ? eventDetails.assistance : eventDetails.estimate}}
+                    <small class="fs-5">/{{eventDetails.capacity}}</small>
+                  </p>
+                </div>
+                <!-- <div>
+                  <h3 class="border-bottom border-danger">Category</h3>
+                  <p class="fs-5">{{eventDetails.category}} / {{eventDetails.place}}</p>
+                </div> -->
+                <div class="d-flex justify-content-evenly align-items-center w-100">
+                  <button class="btn fs-3">🤍</button>
+                  <!-- <button class="btn fs-3">❤️</button> -->
+                  <p class="card-text fs-3 border border-danger rounded px-1">{{eventDetails.category}}</p>
+                  <p class="card-text fs-3 border border-primary rounded px-1">{{eventDetails.place}}</p>
+                </div>
               </div>
             </div>
           </div>
