--- a/VUE-Amazing-Events/contact.html
+++ b/VUE-Amazing-Events/contact.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <main class="d-flex flex-column vh-100">
+    <main class="d-flex flex-column vh-100" id="App">
       <header class="bg-dark text-white border-bottom border-danger">
         <nav class="navbar navbar-expand-md p-0 w-100">
           <div class="container-fluid">
@@ -29,7 +29,7 @@
               aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse pb-1" id="navbarSupportedContent">
               <ul
                 class="navbar-nav list-group list-group-horizontal justify-content-evenly flex-row flex-wrap gap-1 w-100">
                 <li class="nav-item">
@@ -58,21 +58,22 @@
         <a href="./stats.html" class="btn p-0 px-1"><span class="fs-2 text-white">➤</span></a>
       </section>
       <div class="d-flex flex-column py-4 flex-grow-1">
-        <form class="d-flex flex-column align-items-center container-sm gap-1">
+        <form class="d-flex flex-column align-items-center container-sm gap-1" @submit.prevent="handleFormSubmit(e)">
           <div class="form-floating mb-3 w-100">
-            <input type="text" class="form-control" id="name" placeholder="Name" required>
+            <input type="text" class="form-control" id="name" v-model="formValues.name" placeholder="Name" required>
             <label for="name">Name</label>
           </div>
           <div class="form-floating mb-3 w-100">
-            <input type="email" class="form-control" id="email" placeholder="Email" required>
+            <input type="email" class="form-control" id="email" placeholder="Email" v-model="formValues.email" required>
             <label for="email">Email address</label>
           </div>
           <div class=" form-floating w-100">
-            <textarea class="form-control h-75" id="message" name="message" placeholder="Leave a message here" required
-              rows="8"></textarea>
+            <textarea class="form-control h-75" id="message" name="message" v-model="formValues.message"
+              placeholder="Leave a message here" required rows="8"></textarea>
             <label for="message">Message</label>
           </div>
           <button type="submit" class="btn btn-lg btn-danger align-self-end">Submit</button>
+          <p v-if="formSubmitted" class="px-2 bg-success text-white rounded">Mensaje Enviado</p>
         </form>
       </div>
       <footer class="d-flex justify-content-between align-items-center bg-danger p-3">
@@ -97,7 +98,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script>
-    <script src="./contact.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@3"></script>
+    <script src="./home.js"></script>
   </body>
 
 </html>
