--- a/VUE-Amazing-Events/event-details.html
+++ b/VUE-Amazing-Events/event-details.html
@@ -30,7 +30,7 @@
               aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse pb-1" id="navbarSupportedContent">
               <ul
                 class="navbar-nav list-group list-group-horizontal justify-content-evenly flex-row flex-wrap gap-1 w-100">
                 <li class="nav-item">
@@ -47,6 +47,9 @@
                 </li>
                 <li class="nav-item">
                   <a class="btn btn-danger" href="./stats.html">Stats</a>
+                </li>
+                <li v-if="favourites.length" class="nav-item">
+                  <a class="btn btn-danger" href="./favourites.html">Favourites</a>
                 </li>
               </ul>
             </div>
@@ -81,13 +84,10 @@
                     <small class="fs-5">/{{eventDetails.capacity}}</small>
                   </p>
                 </div>
-                <!-- <div>
-                  <h3 class="border-bottom border-danger">Category</h3>
-                  <p class="fs-5">{{eventDetails.category}} / {{eventDetails.place}}</p>
-                </div> -->
                 <div class="d-flex justify-content-evenly align-items-center w-100">
-                  <button class="btn fs-3">🤍</button>
-                  <!-- <button class="btn fs-3">❤️</button> -->
+                  <button v-if="favourites.some(e => e.name === eventDetails.name)"
+                    @click="deleteFavourite(eventDetails)" class="btn fs-3">❤️</button>
+                  <button v-else @click="addFavourite(eventDetails)" class="btn fs-3">🤍</button>
                   <p class="card-text fs-3 border border-danger rounded px-1">{{eventDetails.category}}</p>
                   <p class="card-text fs-3 border border-primary rounded px-1">{{eventDetails.place}}</p>
                 </div>
