--- a/VUE-Amazing-Events/stats.html
+++ b/VUE-Amazing-Events/stats.html
@@ -29,7 +29,7 @@
               aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse pb-1" id="navbarSupportedContent">
               <ul
                 class="navbar-nav list-group list-group-horizontal justify-content-evenly flex-row flex-wrap gap-1 w-100">
                 <li class="nav-item">
@@ -47,6 +47,9 @@
                 <li class="nav-item">
                   <a class="btn btn-danger" href="./stats.html">Stats</a>
                 </li>
+                <li v-if="favourites.length" class="nav-item">
+                  <a class="btn btn-danger" href="./favourites.html">Favourites</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -55,7 +58,8 @@
       <section class="d-flex justify-content-between align-items-center bg-danger py-1 px-2 ">
         <a href="./contact.html" class="btn p-0 px-1 arrow-left"><span class="fs-2 text-white">➤</span></a>
         <h1 class="text-white">Stats</h1>
-        <a href="./index.html" class="btn p-0 px-1"><span class="fs-2 text-white">➤</span></a>
+        <a :href="favourites.length ? './favourites.html' : './index.html'" class="btn p-0 px-1"><span
+            class="fs-2 text-white">➤</span></a>
       </section>
       <div class="d-flex flex-column p-4 flex-grow-1">
         <table class="table table-bordered m-0">
