--- a/VUE-Amazing-Events/upcoming-events.html
+++ b/VUE-Amazing-Events/upcoming-events.html
@@ -29,7 +29,7 @@
               aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse pb-1" id="navbarSupportedContent">
               <ul
                 class="navbar-nav list-group list-group-horizontal justify-content-evenly flex-row flex-wrap gap-1 w-100">
                 <li class="nav-item">
@@ -46,6 +46,9 @@
                 </li>
                 <li class="nav-item">
                   <a class="btn btn-danger" href="./stats.html">Stats</a>
+                </li>
+                <li v-if="favourites.length" class="nav-item">
+                  <a class="btn btn-danger" href="./favourites.html">Favourites</a>
                 </li>
               </ul>
             </div>
@@ -90,14 +93,15 @@
             <div class="card bg-dark text-white p-2 justify-content-between">
               <img :src=event.image class="card-img-top" :alt=`${event.name}`>
               <span class="card-text-top bg-dark text-white fs-5 px-2 bold">{{event.date}}</span>
-              <div class="d-flex justify-content-between align-items-center text-start mt-1">
-                <h3 class="card-title fs-4 m-0">{{event.name}}</h3>
-                <p class="d-flex flex-wrap justify-content-end align-items-center"><strong
-                    class="fs-2">${{event.price}}</strong><small>/Person</small></p>
-              </div>
-              <div class="d-flex justify-content-between align-items-center py-1">
-                <span class="card-text fs-5 border border-danger rounded px-2">{{event.category}}</span>
-                <a :href="`./event-details.html?id=${event._id}`" class="btn btn-danger">Details</a>
+              <div class="d-flex justify-content-between align-items-end text-start mt-1 gap-2">
+                <div class="d-flex flex-column gap-2 w-100">
+                  <h3 class="card-title fs-4 m-0">{{event.name}}</h3>
+                  <a :href="`./event-details.html?id=${event._id}`" class="btn btn-danger">Details</a>
+                </div>
+                <p
+                  class="d-flex flex-wrap flex-column justify-content-end align-items-center border border-light p-2 rounded">
+                  <strong class="fs-2">${{event.price}}</strong><small>/Person</small>
+                </p>
               </div>
             </div>
           </div>
